# agents-misc

./: .gitignore  .prettierignore  .prettierrc.yaml  AGENTS.md  README.md  flake.nix  justfile  treefmt.nix
tools/agents-viewer/: Cargo.toml  README.md  schema.sql
tools/agents-viewer/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  paths.rs  permissions.rs  watch.rs
tools/agents-viewer/src/index/: coordinator.rs  db.rs  mod.rs  recovery.rs  relationships.rs  scanner.rs  search.rs  writer.rs
tools/agents-viewer/src/rollout/: dedup.rs  envelope.rs  mod.rs  normalize.rs  reader.rs  types.rs
tools/agents-viewer/src/server/: api.rs  assets.rs  cursor.rs  middleware.rs  mod.rs  sse.rs
tools/agents-viewer/tests/: cli_contract.rs  generated_contract.rs  index_integration.rs  initial_index.rs  live_updates.rs  parser_compat.rs  performance.rs  read_only.rs  read_only_strace.rs  security.rs  server_api.rs
tools/agents-viewer/tests/support/: mod.rs
tools/agents-viewer/web/: components.json  e2e.config.example.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
tools/agents-viewer/web/e2e/: auth.spec.ts  browser.ts  fixtures.ts  viewer.spec.ts
tools/agents-viewer/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
tools/agents-viewer/web/src/lib/: api.ts  i18n.ts
tools/codex-config-atlas/: README.md  pyproject.toml
tools/codex-config-atlas/schemas/: manifest.json
tools/codex-config-atlas/schemas/rust-v0.131.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.132.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.135.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.136.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.137.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.139.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.140.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.141.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.144.0/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.144.2/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.144.3/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.144.4/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.144.5/: metadata.json
tools/codex-config-atlas/schemas/rust-v0.144.6/: metadata.json
tools/codex-config-atlas/web/: index.html  style.css
(+279 files in other folders)
