[package]
name = "agents-viewer"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false
autobins = false

[features]
default = []
embedded-ui = ["dep:include_dir"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"

[[bin]]
name = "agents-viewer"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
axum = "=0.8.8"
base64 = "=0.22.1"
chrono = { version = "=0.4.43", features = ["serde"] }
clap = { version = "=4.5.58", features = ["derive"] }
dirs = "=6.0.0"
dunce = "=1.0.5"
fs4 = "=1.1.0"
futures = "=0.3.31"
http = "=1.4.0"
include_dir = { version = "=0.7.4", optional = true }
libsqlite3-sys = { version = "=0.37.0", default-features = false }
memchr = "=2.8.1"
mime_guess = "=2.0.5"
notify = "=8.2.0"
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_path_to_error = "=0.1.20"
sha2 = "=0.10.9"
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "sqlite-bundled", "chrono", "json", "uuid"] }
tempfile = "=3.27.0"
thiserror = "=2.0.18"
tokio = { version = "=1.52.3", features = ["full"] }
tokio-stream = "=0.1.18"
tokio-util = "=0.7.18"
toml = "=1.1.2"
tower = { version = "=0.5.3", features = ["util"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
ts-rs = "=11.1.0"
unicode-segmentation = "=1.12.0"
uuid = { version = "=1.20.0", features = ["serde", "v4"] }
walkdir = "=2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

[dev-dependencies]
assert_cmd = "=2.1.2"
predicates = "=3.1.3"
pretty_assertions = "=1.4.1"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = "warn"
