[project]
name = "codex-config-atlas"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "packaging",
  "rich",
  "tomlkit",
]

[project.scripts]
codex-config-atlas = "codex_config_atlas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_config_atlas"]
